# Henkanki

./: .gitignore  README.md  henkanki.config.json  package.json
apps/cli/: README.md  henkanki.mjs
apps/desktop/: Cargo.toml  README.md  index.html  tauri.conf.json
apps/desktop/src/: main.rs
apps/mobile/: README.md  capacitor.config.json  package.json
apps/vscode/: esbuild.config.mjs  extension.js  package.json
apps/web/: README.md  index.html  server.mjs
apps/web/public/: manifest.webmanifest  service-worker.js
apps/web/src/: main.mjs  styles.css
compat/architecture-matrix/: README.md
compat/os-matrix/: README.md
crates/henkanki-cli/: README.md
crates/henkanki-core/: README.md
crates/henkanki-wasm/: README.md
design/brand/: README.md
docs/: architecture.md  branding.md  features.md  languages.md  platforms.md  plugin-system.md  privacy.md  release-strategy.md  repository-layout.md  roadmap.md
examples/: README.md
plugins/official/: README.md
ports/arm/: README.md
ports/bsd/: README.md
ports/docker/: README.md
ports/haiku/: README.md
ports/linux/: README.md
ports/macos/: README.md
ports/riscv/: README.md
ports/windows/: README.md
retro/amiga/: README.md
retro/android-legacy/: README.md
retro/beos/: README.md
retro/classic-mac/: README.md
retro/ios-legacy/: README.md
retro/palmos/: README.md
retro/symbian/: README.md
retro/windows-legacy/: README.md
testdata/: README.md
tools/: README.md  check.mjs
