[package]
name = "henkanki-desktop"
version = "0.2.0"
description = "Henkanki Desktop - Local-first file converter"
authors = ["XIIIXXXIII"]
license = "MIT"
repository = "https://github.com/XIIIXXXIII/Henkanki"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
